--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -5,6 +5,6 @@
     <title>My First Webpage</title>
 </head>    
 <body>
-    <h1>Mmami Moloi</h1>
+    <h1>Mmami Mofokeng</h1>
 </body>    
 </html>
